--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,44 +1,70 @@
-.App {
-  text-align: center;
-
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-
-  .App-link {
-    color: #61dafb;
-  }
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.layout {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 2fr 5fr 2fr 2fr 2fr 2fr 1fr;
+  grid-template-areas:
+    'Header'
+    'Content'
+    'content3'
+    'content4'
+    'content5'
+    'content6'
+    'Footer';
+}
+.Header {
+  grid-area: Header;
+  background-color: rgb(9, 91, 64);
+}
+.Content {
+  grid-area: Content;
+  background-color: rgb(23, 123, 66);
+}
+.content3 {
+  grid-area: content3;
+  background-color: rgb(2, 68, 46);
+}
+.content4 {
+  grid-area: content4;
+  background-color: rgb(15, 18, 106);
+}
+.content5 {
+  grid-area: content5;
+  background-color: rgb(134, 20, 121);
+}
+.content6 {
+  grid-area: content6;
+  background-color: rgb(44, 162, 18);
+}
+.Footer {
+  grid-area: Footer;
+  background-color: rgb(164, 34, 34);
+}
+.SideBar {
+  grid-area: SideBar;
+  background-color: rgb(73, 6, 82);
 }
 
-.big-red {
-  color: red;
-  font-weight: 700;
-  font-size: 72pt;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (min-width: 768px) {
+  .layout {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 2fr 5fr 2fr 2fr 2fr 2fr 1fr;
+    grid-template-areas:
+      'Header Header Header Header'
+      'SideBar Content Content Content'
+      'SideBar Content Content Content'
+      'SideBar Content Content Content'
+      'SideBar content3 content4 content5'
+      'SideBar content3 content4 content6'
+      'Footer Footer Footer Footer';
   }
 }
